@startuml ThanhToan_ClassDiagram
skinparam classAttributeIconSize 0
skinparam style strictuml
title Class Diagram - UC16: Thanh toán

class "ScreenPayment" <<boundary>> {
    + selectMethod()
    + showQRCode()
    + notifyResult()
}

class "Payment" <<control>> {
    - sessionId: String
    - registrationId: String
    - action: String
    - method: String
    - status: String
    - qrCode: String
    - expiresAt: Date
    - invoiceId: String
    + <<static>> createPaymentCode(payload)
    + <<static>> verifyTransaction(payload)
    + <<static>> finalizePayment(payload)
    + <<static>> getPaymentStatus(sessionId)
}

class "Rental" <<control>> {
    - registrationId: String
    - roomId: String
    - bedIds: String[]
    - roomPrice: Double
    - alreadyDeposited: Boolean
    + <<static>> previewPayment(payload)
}

class "PaymentDB" <<entity>> {
    + <<static>> createSession()
    + <<static>> getSession()
    + <<static>> updateSessionStatus()
    + <<static>> createInvoice()
}

class "RentalDB" <<entity>> {
    + <<static>> getRegistration()
    + <<static>> markDeposited()
    + <<static>> markFullyPaid()
    + <<static>> markBooked()
}

class "RoomDB" <<entity>> {
    + <<static>> markBedsStatus()
}

"ScreenPayment" ..> "Payment"
"Payment" ..> "Rental"
"Payment" ..> "PaymentDB"
"Payment" ..> "RentalDB"
"Payment" ..> "RoomDB"

@enduml
